# J.A.R.V.I.S

./: .gitignore  pyproject.toml  test.py
Brain/Activity/advice/: advice.py
Brain/Activity/greet/welcome/: welcome.py
Brain/Activity/greet/wish/: wish.py
Brain/Activity/joke/: jokes.py
Brain/Main_Brain/google_data1/: small_data.py
Brain/Main_Brain/google_data2/: big_data.py
Brain/Training_Brain/model_1/: model1.py
Brain/Training_Brain/model_2/: model2.py
Find_My_IP/: find_ip.py
check_internet_speed/: check_speed.py
check_online_status/: check_online_status.py
check_temperature/: check_temperature.py
clap_detector/: clap_detector.py  play_music_with_clap.py
clock/: time.py
common_automation/common_close/: close.py
common_automation/common_integration/: common_integration.py
common_automation/common_open/: open.py
data/: intents.json  qna.txt
jarvis_automation/youtube/: caption.py  integration_main.py  manual_search.py  others.py  pause.py  play.py  search.py  video_playback.py
jarvis_automation_google/: search.py
jarvis_battery_automation/: battery_alert.py  battery_integration.py  battery_plug_check.py  check_battery_percent.py
jarvis_battery_automation.py/: battery_integration.py  battery_plug_check.py
jarvis_browser_automation/: browser_integration.py  open_website.py  scroll_automation.py  search.py  tab_automation.py
jarvis_dlg_dataset/: dlg.py
jarvis_listen/: listen.py
jarvis_speak/: speak.py
