[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "deep-translator>=1.11.4",
    "langdetect>=1.0.9",
    "mtranslate>=1.8",
    "pyaudio>=0.2.14",
    "selenium>=4.33.0",
    "speechrecognition>=3.14.3",
]
