[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "data>=0.4",
    "deep-translator>=1.11.4",
    "langdetect>=1.0.9",
    "mtranslate>=1.8",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "psutil>=7.0.0",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pygame>=2.6.1",
    "python-dotenv>=1.1.1",
    "pyttsx3>=2.98",
    "pywhatkit>=5.4",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "selenium>=4.33.0",
    "speechrecognition>=3.14.3",
]
